[metadata]
name = flow
author = Ryan Campbell
author-email = campbellr@gmail.com
summary = A python client library for Polar Flow
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    flow
